# systeme-reco

./: .gitignore  Cargo.toml  README.md  basicsfunctions.py  hybride.py  load.py  musiques_user.csv  peuplement_fav_user.py  popu_ecoute.py  reco_cyp.py  reco_echonest_steph.py  reco_item_based.py  reco_item_based_matheo.py  reco_item_based_mathieu.py  reco_pierre_luc.py  reco_pierre_user_item-user_based.py  reco_steph_echonest.py  reco_test_matheo.py  reco_user_based_p1.py  reco_user_based_p2.py  reco_user_based_p3.py  requirements.txt  test.py
prompts/: audit.md  audit.result.md
py_source/: .gitignore  README.md  basicsfunctions.py  hybride.py  load.py  popu_ecoute.py  pyproject.toml  reco_item_based_matheo.py  reco_item_based_mathieu.py  reco_steph_echonest.py  reco_user_based_p3.py  requirements.txt  time_test.py
py_source/DEPRECATED/: peuplement_fav_user.py
src/: basics_function.rs  db_helper.rs  main.rs  reco_user_based_p1.rs
